gh-pages: ce387cefe9509938f63cf52015171680fd582f37 Testing

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<h1 id="toc_0">Hello World =D</h1>
+<h1 id="toc_0">Hello World</h1>
 
 <blockquote>
 <p>A profound quote.</p>
@@ -10,6 +10,6 @@
 <li>apples</li>
 <li>oranges</li>
 <li>watermelons</li>
-<li>tomatoes</li>
-<li>avocados</li>
 </ul>
+
+<p>Sanity test</p>
