--- a/index/1/index.html
+++ b/index/1/index.html
@@ -15,7 +15,7 @@
         <h3 class="title"><a href="/">Index</a> <span class="date"></span></h3>
 
         <div class="summary">
-<h1 id="toc_0">Hello World =D</h1>
+<h1 id="toc_0">Hello World</h1>
 
 <blockquote>
 <p>A profound quote.</p>
@@ -27,9 +27,9 @@
 <li>apples</li>
 <li>oranges</li>
 <li>watermelons</li>
-<li>tomatoes</li>
-<li>avocados</li>
 </ul>
+
+<p>Sanity test</p>
 </div>
 
         <div class="more">
