--- a/index/2/index.html
+++ b/index/2/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Index</title>
+    <title></title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="First-name Last-name">
 
@@ -51,28 +51,76 @@
     <div class="container-narrow">
 
       <div class="content">
-        <div class="page-header">
-  <h1>Index </h1>
+        <div class="row-fluid">
+  <div class="span12">
+      <div class="_root">
+        <h3 class="title"><a href="/pages">Pages</a> <span class="date"></span></h3>
+
+        <div class="summary">
+<ul>
+  
+    <li><a href="/about-me">About Me</a></li>
+  
+  
+    <li><a href="/archive">Archive</a></li>
+  
+  
+    <li><a href="/categories">Categories</a></li>
+  
+  
+    <li><a href="/">Home</a></li>
+  
+  
+    <li><a href="/">Index</a></li>
+  
+    <li class="active"><a href="/pages" class="active">Pages</a></li>
+  
+  
+  
+    <li><a href="/tags">Tags</a></li>
+  
+  
+    <li><a href="/test">Test</a></li>
+  
+</ul>
 </div>
 
-<div class="row-fluid">
-  <div class="span12">
-    <h1 id="toc_0">Hello World</h1>
+        <div class="more">
+          <a href="/pages" class="btn btn-small">read more..</a>
+        </div>
+      </div>
+      <div class="_root">
+        <h3 class="title"><a href="/tags">Tags</a> <span class="date"></span></h3>
 
-<blockquote>
-<p>A profound quote.</p>
-</blockquote>
-
-<h3 id="toc_1">Fruits I like</h3>
-
-<ul>
-<li>apples</li>
-<li>oranges</li>
-<li>watermelons</li>
+        <div class="summary">
+<ul class="tag_box inline">
 </ul>
 
-<p>Sanity test</p>
+ 
+</div>
 
+        <div class="more">
+          <a href="/tags" class="btn btn-small">read more..</a>
+        </div>
+      </div>
+      <div class="_root">
+        <h3 class="title"><a href="/test">Test</a> <span class="date"></span></h3>
+
+        <div class="summary">
+<p>ABOUT ME</p>
+</div>
+
+        <div class="more">
+          <a href="/test" class="btn btn-small">read more..</a>
+        </div>
+      </div>
+    
+    <div class="pagination">
+      <ul>
+          <li><a href="/index/1">1</a></li>
+          <li class="active"><a href="/index/2">2</a></li>
+      </ul>
+    </div>
   </div>
 </div>
 
